# agent-poc

./: .gitignore  pyproject.toml
.github/instructions/: agent.md.instructions.md
.github/workflows/: day1-ci.yml  day2-ci.yml  day2-python-ci.yml  day3-ci.yml  day4-ci.yml
data/question/: raw_questions.txt
src/agent_poc/: __init__.py
src/agent_poc/modules/: __init__.py
src/agent_poc/modules/planning/: adapters.py  code_generation.py  codegen.py  pipeline.py  plan_generation.py  planner.py  schema_converters.py  test_set.yaml  train_set.yaml
src/agent_poc/modules/query_understanding/: __init__.py  query_understanding.py  query_understanding_optimized.json  query_understanding_optimized_2.json  query_understanding_optimizer.py  query_understanding_optimizer_1.py  query_understanding_optimizer_2.py  test_set.yaml  train_set.yaml
src/agent_poc/modules/semantic_grouding/: relation_relevance.py
src/agent_poc/modules/semantic_grounding/: entity_expansion.py  graph_expansion.py  pipeline.py  relation_discovery.py  relation_filtering.py  relation_relevance.py  semantic_grounding.py
src/agent_poc/nodes/: query_understanding_optimized_2.json  query_understanding_optimizer_2.py  test_set.yaml  training_set.yaml
src/agent_poc/semantic_layer/: engine.py  generate_models.py  ontology.html  ontology.py  ontology.yaml  runtime.py  tool_decorator.py  tools.py  tools.yaml  tools_registry.py  tools_selection.py  visualizer.py  visulizer.py
src/agent_poc/utils/: dspy_helper.py  langfuse_helper.py  mlflow_helper.py
tests/: test_example.py
(+17 files in other folders)
