[project]
name = "agent-poc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Jeff Zhang", email = "jianfeng.zhang@maersk.com" }
]
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "dspy>=3.0.4",
    "langfuse>=3.10.1",
    "langgraph>=1.0.3",
    "mlflow>=3.6.0",
    "networkx>=3.5",
    "openinference-instrumentation-dspy>=0.1.30",
    "pyvis>=0.3.2",
    "ruff>=0.14.11",
]

[project.scripts]
agent-poc = "agent_poc:main"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[build-system]
requires = ["uv_build>=0.8.19,<0.9.0"]
build-backend = "uv_build"
